--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" type="image/png" href="favicon.png" />
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
