--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 				-->
                 <br>
             </div>
-            <span id="gameId">Game ID:</span>
+            <span id="gameId">URL to join:</span>
 
         </div>
     </body>
