--- a/public/index.html
+++ b/public/index.html
@@ -86,5 +86,6 @@
     <script src="js/Level.js?v=0.1"></script>
     <script src="js/Bullets.js?v=0.1"></script>
     <script src="js/HealthBar.js?v=0.1"></script>
+	<script src="js/CollisonHandling.js?v=0.1"></script>
     <script src="js/main.js?v=0.1"></script>
 </html>
